--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
   <meta property="og:description" content="愛媛でマイホームの外壁塗装といえば「サンキューペイント」にお任せください！家族が帰ってくる場所だからいつまでも美しく。高品質・安い・長期保証がそろった安心の外壁工事です。">
   <meta property="og:image" content="https://thankyoupaint.github.io/images/top.png">
   <meta name="google-site-verification" content="t5qlJ9c0Nn-c-uO6VRxSHQhuVhZY63D55FwFAWUc1Q8" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8FCWHS8QB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-Q8FCWHS8QB');
+  </script>
 </head>
 <body>
   <header>
