--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <div class="main-content wrapper company">
         <div class="item-flex">
           <!-- 会社概要 -->
-            <div>
+            <div id="index6">
               <p>会社案内</p>
               <p>サンキューペイント</p>
               <p>住所：愛媛県松山市南斎院町１５１３ー３</p>
