--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
   <!-- 画面下のお問い合わせ pc画面-->
   <div class="contact-under-pc">
-    <a href="tel:089-972-2290"><img src="images/call-under.png" alt="サンキューペイントに電話"></a>
+    <a href="tel:070-9100-0390"><img src="images/call-under.png" alt="サンキューペイントに電話"></a>
     <p>【受付】8:00~19:00<br>【定休日】日祝</p>
     <a href="https://line.me/R/ti/p/@804makav" target="_blank" rel="nofollow"><img src="images/lineheader.jpeg" alt="サンキューペイントのLINE"></a>
   </div>
@@ -108,7 +108,7 @@
     <p>【受付】8:00~19:00&nbsp;【定休日】日祝</p>
     <div class="contact-under-content">
       <div class="contact-under-tel">
-        <a href="tel:089-972-2290">
+        <a href="tel:070-9100-0390">
           <img src="images/call-under.png" alt="サンキューペイントに電話">
         </a>
       </div>
@@ -360,7 +360,8 @@
               <p>住所：愛媛県松山市南斎院町１５１３ー３</p>
               <p>対応可能地域：愛媛県全域</p>
               <p>TEL：<a href="tel:089-972-2290">０８９ー９７２ー２２９０</a></p>
-              <p>LINE ID：@804makav</p>
+              <p>携帯：<a href="tel:070-9100-0390">０７０−９１００−０３９０</a></p>
+              <p>※現場に出ていることが多いため携帯にご連絡ください。</p>
             </div>
         </div>            
      </div>
